--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,6 +15,6 @@ ENV SHA=${GIT_COMMIT_SHA}
 
 LABEL maintainer=jon@jaggersoft.com
 
-RUN npm install --global jest
+RUN npm install --global jest typescript ts-jest ts-lib
 
 COPY red_amber_green.rb /usr/local/bin
