--- a/docker/package.json
+++ b/docker/package.json
@@ -1,7 +1,13 @@
 {
   "devDependencies": {
     "@types/jest": "*",
+    "@typescript-eslint/eslint-plugin": "*",
+    "@typescript-eslint/parser": "*",
+    "eslint": "*",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "*",
+    "prettier": "*",
     "ts-jest": "*",
     "ts-lib": "*",
     "typescript": "*",
